nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8082"
spec:
  selector:
    app: nginx
  ports:
    - port: 8082
      targetPort: 80
      protocol: TCP
